Aggiornata la traccia per l'esercizio 1

--- a/esercizio1/index.html
+++ b/esercizio1/index.html
@@ -1,7 +1,8 @@
 <!--
-  Esercizio 1: Creare all’interno di una pagina html un select che contiene una lista di province. 
-  In base alla provincia selezionata, rendere visibile una seconda select con 
-  l’elenco dei comuni appartenente alla provincia scelta. 
+  Esercizio 1: Creare all’interno di una pagina html un select che contiene una lista di regioni. 
+  In base alla regione selezionata, rendere visibile una seconda select con 
+  l’elenco delle province appartenente alla regione scelta e, scelta la provincia,
+  rendere visibile una terza select con l'elenco dei comuni ad essa associate. 
 -->
 
 <html>
