Aggiunta form inserimento

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -12,5 +12,35 @@
     <title>Esercizio 5</title>
   </head>
 
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <!-- Form di inserimento -->
+        <div class="col-12 col-md-4">
+          <p class="h3">Inserimento</p>
+          <form action="">
+            <div class="form-control">
+              <label>Nome</label>
+              <input type="text" class="form-control" id="formName" />
+            </div>
+            <div class="form-control">
+              <label>Cognome</label>
+              <input type="text" class="form-control" id="formSurname" />
+            </div>
+            <div class="form-control">
+              <label>Codice Fiscale</label>
+              <input type="text" class="form-control" id="formCF" />
+            </div>
+            <button class="btn btn-primary">Salva</button>
+          </form>
+        </div>
+
+        <!-- Colonna dei contatti -->
+        <div class="col-12 col-md-4"></div>
+
+        <!-- Ricerca -->
+        <div class="col-12 col-md-4"></div>
+      </div>
+    </div>
+  </body>
 </html>
