Aggiunta stile container Fix stile colonna 1

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -3,31 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="base.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="base.css" />
     <script src="anagrafica.js"></script>
     <title>Esercizio 5</title>
   </head>
 
   <body>
-    <div class="container">
+    <div class="container" id="primary-content">
+      <div class="row mt-3">
+        <div class="col-12">
+          <p class="h1 text-center">Esercizio 5</p>
+        </div>
+      </div>
       <div class="row">
         <!-- Form di inserimento -->
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 mb-3">
           <p class="h3">Inserimento</p>
           <form action="">
-            <div class="form-control">
+            <div class="form-group">
               <label>Nome</label>
               <input type="text" class="form-control" id="formName" />
             </div>
-            <div class="form-control">
+            <div class="form-group">
               <label>Cognome</label>
               <input type="text" class="form-control" id="formSurname" />
             </div>
-            <div class="form-control">
+            <div class="form-group">
               <label>Codice Fiscale</label>
               <input type="text" class="form-control" id="formCF" />
             </div>
