Aggiunta titoli colonne

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row">
         <!-- Form di inserimento -->
-        <div class="col-12 col-md-4 mb-3">
+        <div class="col-12 col-sm-4 mb-3">
           <p class="h3">Inserimento</p>
           <form action="">
             <div class="form-group">
@@ -41,10 +41,14 @@
         </div>
 
         <!-- Colonna dei contatti -->
-        <div class="col-12 col-md-4"></div>
+        <div class="col-12 col-sm-4">
+          <p class="h3">I miei contatti</p>
+        </div>
 
         <!-- Ricerca -->
-        <div class="col-12 col-md-4"></div>
+        <div class="col-12 col-sm-4">
+          <p class="h3">Cerca</p>
+        </div>
       </div>
     </div>
   </body>
