Aggiunta funzione per bottone

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -36,7 +36,9 @@
               <label>Codice Fiscale</label>
               <input type="text" class="form-control" id="formCF" />
             </div>
-            <button class="btn btn-primary">Salva</button>
+            <button class="btn btn-primary" onclick="sendDataDB()">
+              Salva
+            </button>
           </form>
         </div>
 
