Commentato il tag form

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -23,23 +23,23 @@
         <!-- Form di inserimento -->
         <div class="col-12 col-sm-4 mb-3">
           <p class="h3">Inserimento</p>
-          <form action="">
-            <div class="form-group">
-              <label>Nome</label>
-              <input type="text" class="form-control" id="formName" />
-            </div>
-            <div class="form-group">
-              <label>Cognome</label>
-              <input type="text" class="form-control" id="formSurname" />
-            </div>
-            <div class="form-group">
-              <label>Codice Fiscale</label>
-              <input type="text" class="form-control" id="formCF" />
-            </div>
-            <button class="btn btn-primary" onclick="sendDataDB()">
-              Salva
-            </button>
-          </form>
+          <!-- <form action=""> -->
+          <div class="form-group">
+            <label>Nome</label>
+            <input type="text" class="form-control" id="formName" />
+          </div>
+          <div class="form-group">
+            <label>Cognome</label>
+            <input type="text" class="form-control" id="formSurname" />
+          </div>
+          <div class="form-group">
+            <label>Codice Fiscale</label>
+            <input type="text" class="form-control" id="formCF" />
+          </div>
+          <button class="btn btn-primary" onclick="sendDataDB()">
+            Salva
+          </button>
+          <!-- </form> -->
         </div>
 
         <!-- Colonna dei contatti -->
