- Aggiunto border di errore per il CF - Inizio sviluppo parte 2 - Aggiunto contatore di contatti (localstorage)

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -44,7 +44,7 @@
 
         <!-- Colonna dei contatti -->
         <div class="col-12 col-sm-4">
-          <p class="h3">I miei contatti</p>
+          <p class="h3">I miei contatti: <span id="contactCounter"></span></p>
         </div>
 
         <!-- Ricerca -->
