Bozza lista contatti

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -45,6 +45,25 @@
         <!-- Colonna dei contatti -->
         <div class="col-12 col-sm-4">
           <p class="h3">I miei contatti: <span id="contactCounter"></span></p>
+          <div
+            class="container list-group overflow-auto my-3 p-0"
+            id="contactBook"
+          >
+            <div class="list-group-item py-0">
+              <div class="row align-items-center my-3">
+                <div class="col-10 p-0">
+                  <ul class="m-0">
+                    <li class="contactListItem">Nome</li>
+                    <li class="contactListItem">Cognome</li>
+                    <li class="contactListItem">CF</li>
+                  </ul>
+                </div>
+                <div class="col-2">
+                  <button class="btn btn-danger">X</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Ricerca -->
