Switch della carta contatti da row/col a flex

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -49,18 +49,14 @@
             class="container list-group overflow-auto my-3 p-0"
             id="contactBook"
           >
-            <div class="list-group-item py-0">
-              <div class="row align-items-center my-3">
-                <div class="col-10 p-0">
-                  <ul class="m-0">
-                    <li class="contactListItem">Nome</li>
-                    <li class="contactListItem">Cognome</li>
-                    <li class="contactListItem">CF</li>
-                  </ul>
-                </div>
-                <div class="col-2">
-                  <button class="btn btn-danger">X</button>
-                </div>
+            <div class="list-group-item contactCard">
+              <div class="d-flex justify-content-between align-items-center">
+                <ul class="contactInfoList">
+                  <li class="contactListItem">Nome</li>
+                  <li class="contactListItem">Cognome</li>
+                  <li>Codice Fiscale</li>
+                </ul>
+                <button class="btn btn-danger">X</button>
               </div>
             </div>
           </div>
