--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -49,16 +49,18 @@
             class="container list-group overflow-auto my-3 p-0"
             id="contactBook"
           >
-            <div class="list-group-item contactCard">
-              <div class="d-flex justify-content-between align-items-center">
-                <ul class="contactInfoList">
-                  <li class="contactListItem">Nome</li>
-                  <li class="contactListItem">Cognome</li>
-                  <li>Codice Fiscale</li>
-                </ul>
-                <button class="btn btn-danger">X</button>
-              </div>
+            <!--
+            <div
+              class="d-flex justify-content-between align-items-center list-group-item contactCard"
+            >
+              <ul class="contactInfoList">
+                <li class="contactListItem">Nome</li>
+                <li class="contactListItem">Cognome</li>
+                <li>Codice Fiscale</li>
+              </ul>
+              <button class="btn btn-danger" onclick="test(this)">X</button>
             </div>
+            -->
           </div>
         </div>
 
