Implementazione ricerca per match parziale

--- a/esercizio5/index.html
+++ b/esercizio5/index.html
@@ -71,7 +71,7 @@
           <div class="search-button-row d-flex justify-content-between">
             <button
               class="btn btn-primary flex-grow-1 search-button"
-              onclick="triggerSearch()"
+              onclick="searchContacts()"
             >
               Cerca
             </button>
