Aggiustata la funzione endGame()
Bisogna salvare il numero di match effettuati

--- a/esercizio6/index.html
+++ b/esercizio6/index.html
@@ -27,7 +27,7 @@
                 <button 
                 class="btn btn-danger" 
                 id="quitGameButton" 
-                onclick="quitGame()" 
+                onclick="endGame(true)" 
                 disabled>
                     INTERROMPI
                 </button>
