--- a/esercizio6/index.html
+++ b/esercizio6/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="col-6">
                 <input type="text" id="playerNameInput" placeholder="Inserisci il tuo nome" />
-
             </div>
         </div>
+
         <!-- Sezione carte -->
-        <div class="container">
+        <div class="container" id="cardBoard">
             <div class="row my-4">
                 <div class="col-3">
                     <div class="flip-card">
