--- a/esercizio7-2/index.html
+++ b/esercizio7-2/index.html
@@ -50,7 +50,7 @@
             <button
               type="submit"
               class="btn btn-primary"
-              onclick="return login();"
+              onsubmit="return login();"
             >
               Accedi
             </button>
