--- a/esercizio7-2/index.html
+++ b/esercizio7-2/index.html
@@ -8,7 +8,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
 
     <title>Esercizio 7</title>
   </head>
@@ -22,77 +21,69 @@
       <div class="row">
         <div class="col-6 login-box">
           <h3 class="form-title">Accedi</h3>
-          <form action="home.html" onsubmit="return login();" method="POST">
-            <div class="form-group">
-              <label for="">Indirizzo email</label>
-              <input
-                type="email"
-                placeholder="esempio@mail.it"
-                class="form-control"
-                id="loginMailInput"
-                required
-              />
-            </div>
-            <div class="form-group">
+          <div class="form-group">
+            <label for="">Indirizzo email</label>
+            <input
+              type="email"
+              placeholder="esempio@mail.it"
+              class="form-control"
+              id="loginMailInput"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="">Password</label>
+            <input
+              type="password"
+              placeholder="Password"
+              class="form-control"
+              id="loginPasswordInput"
+              required
+            />
+          </div>
+          <button class="btn btn-primary" onclick="login()">
+            Accedi
+          </button>
+        </div>
+        <div class="col-6 register-box">
+          <h3 class="form-title">Registrati</h3>
+          <div class="form-group">
+            <label for="">Indirizzo email</label>
+            <input
+              type="email"
+              placeholder="esempio@mail.it"
+              class="form-control"
+              id="registerMailInput"
+              required
+            />
+          </div>
+          <div class="form-row">
+            <div class="col-6 form-group">
               <label for="">Password</label>
               <input
                 type="password"
                 placeholder="Password"
                 class="form-control"
-                id="loginPasswordInput"
+                id="registerPasswordInput"
                 required
               />
+              <small>Minimo 6 caratteri, caratteri alfanumerici.</small>
             </div>
-            <button type="submit" class="btn btn-primary">
-              Accedi
-            </button>
-          </form>
-        </div>
-        <div class="col-6 register-box">
-          <h3 class="form-title">Registrati</h3>
-          <form action="#">
-            <div class="form-group">
-              <label for="">Indirizzo email</label>
-              <input
-                type="email"
-                placeholder="esempio@mail.it"
-                class="form-control"
-                id="registerMailInput"
-                required
-              />
-            </div>
-            <div class="form-row">
-              <div class="col-6 form-group">
-                <label for="">Password</label>
-                <input
-                  type="password"
-                  placeholder="Password"
-                  class="form-control"
-                  id="registerPasswordInput"
-                  required
-                />
-                <small>Minimo 6 caratteri, caratteri alfanumerici.</small>
-              </div>
 
-              <div class="col-6 form-group">
-                <label for="">Conferma password</label>
-                <input
-                  type="password"
-                  placeholder="Password"
-                  class="form-control"
-                  id="registerPasswordConfirm"
-                  required
-                />
-              </div>
+            <div class="col-6 form-group">
+              <label for="">Conferma password</label>
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control"
+                id="registerPasswordConfirm"
+                required
+              />
             </div>
-            <button
-              type="submit"
-              class="btn btn-primary"
-              onclick="register(); return false;"
-            >
-              Registrati
-            </button>
-          </form>
+          </div>
+          <button class="btn btn-primary" onclick="register()">
+            Registrati
+          </button>
         </div>
       </div>
     </div>
