--- a/esercizio7-2/index.html
+++ b/esercizio7-2/index.html
@@ -21,29 +21,31 @@
       <div class="row">
         <div class="col-6 login-box">
           <h3 class="form-title">Accedi</h3>
-          <div class="form-group">
-            <label for="">Indirizzo email</label>
-            <input
-              type="email"
-              placeholder="esempio@mail.it"
-              class="form-control"
-              id="loginMailInput"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="">Password</label>
-            <input
-              type="password"
-              placeholder="Password"
-              class="form-control"
-              id="loginPasswordInput"
-              required
-            />
-          </div>
-          <button class="btn btn-primary" onclick="login()">
-            Accedi
-          </button>
+          <form action="home.html">
+            <div class="form-group">
+              <label for="">Indirizzo email</label>
+              <input
+                type="email"
+                placeholder="esempio@mail.it"
+                class="form-control"
+                id="loginMailInput"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="">Password</label>
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control"
+                id="loginPasswordInput"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-primary" onclick="login()">
+              Accedi
+            </button>
+          </form>
         </div>
         <div class="col-6 register-box">
           <h3 class="form-title">Registrati</h3>
