--- a/esercizio7/index.html
+++ b/esercizio7/index.html
@@ -3,96 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
 
     <title>Esercizio 7</title>
   </head>
-
   <body>
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-4">
-          <div id="loginFormDiv">
-            <form class="login-form">
-              <span class="form-title">Login</span>
-              <div class="form-group">
-                <label for="loginEmailInput">Indirizzo mail</label>
-                <input
-                  class="form-control"
-                  type="email"
-                  placeholder="esempio@mail.it"
-                  id="loginEmailInput"
-                />
-              </div>
-              <div class="form-group">
-                <label for="">Password</label>
-                <input
-                  class="form-control"
-                  type="password"
-                  placeholder="Password"
-                  id="loginPasswordInput"
-                />
-              </div>
-              <button class="btn btn-primary" type="submit">Entra</button>
-            </form>
-            <span>Non hai un account? Registrati</span>
-          </div>
-          <div id="registerFormDiv">
-            <div class="register-form">
-              <span class="form-title">Registrati</span>
-
-              <div class="form-group">
-                <label for="">Indirizzo mail</label>
-                <input
-                  type="email"
-                  title="Indirizzo email"
-                  placeholder="esempio@mail.it"
-                  class="form-control"
-                  id="registerEmailInput"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="registerPasswordInput">Password</label>
-                <input
-                  type="password"
-                  title="Password"
-                  placeholder="Inserisci la password"
-                  class="form-control"
-                  id="registerPasswordInput"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="registerPasswordConfirm">Password</label>
-                <input
-                  type="password"
-                  placeholder="Conferma la password"
-                  class="form-control"
-                  id="registerPasswordConfirm"
-                  required
-                />
-              </div>
-              <button class="btn btn-primary" onclick="getRegisterInfo()">
-                Registrati
-              </button>
-            </div>
-            <span>Hai già un account? Accedi</span>
-          </div>
+      <div class="row text-center">
+        <div class="col">
+          <h1>Esercizio 7: Login</h1>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <button class="btn btn-warning" onclick="toggleDivs()">CAMBIA</button>
+      <div class="row">
+        <div class="col-6 login-box">
+          <h3 class="form-title">Accedi</h3>
+          <form
+            action="success.html"
+            id="login"
+            onsubmit="event.preventDefault(); login();"
+          >
+            <div class="form-group">
+              <label for="">Indirizzo email</label>
+              <input
+                type="email"
+                placeholder="esempio@mail.it"
+                class="form-control"
+                id="loginMailInput"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="">Password</label>
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control"
+                id="loginPasswordInput"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Accedi
+            </button>
+          </form>
+        </div>
+        <div class="col-6 register-box">
+          <h3 class="form-title">Registrati</h3>
+          <div class="form-group">
+            <label for="">Indirizzo email</label>
+            <input
+              type="email"
+              placeholder="esempio@mail.it"
+              class="form-control"
+              id="registerMailInput"
+              required
+            />
+          </div>
+          <div class="form-row">
+            <div class="col-6 form-group">
+              <label for="">Password</label>
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control"
+                id="registerPasswordInput"
+                required
+              />
+              <small>Minimo 6 caratteri, caratteri alfanumerici.</small>
+            </div>
+
+            <div class="col-6 form-group">
+              <label for="">Conferma password</label>
+              <input
+                type="password"
+                placeholder="Password"
+                class="form-control"
+                id="registerPasswordConfirm"
+                required
+              />
+            </div>
+          </div>
+          <button class="btn btn-primary" onclick="register()">
+            Registrati
+          </button>
+        </div>
       </div>
     </div>
   </body>
+
   <script src="index.js"></script>
 </html>
