Aggiunto controllo al redirect su "success.html"

--- a/esercizio7/success.html
+++ b/esercizio7/success.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+
     <title>Esercizio 7</title>
   </head>
   <body>
-    <audio src="assets/fanfare.mp3" autoplay></audio>
-    <div class="container-fluid d-flex justify-content-center screen">
-      <span class="align-self-stretch success-text">
-        BENVENUTO!!!
-      </span>
-    </div>
+    <div class="success-page"></div>
   </body>
+
+  <script src="index.js" defer></script>
+  <script src="validatelogin.js" defer></script>
 </html>
