--- a/esercizio6-memory/index2.html
+++ b/esercizio6-memory/index2.html
@@ -14,6 +14,8 @@
 
   <body>
     <div class="container-fluid">
+
+      <!-- Titolo della pagina-->
       <div class="row header text-center">
         <div class="col">
           <h1 class="pageTitle">
@@ -21,7 +23,9 @@
           </h1>
         </div>
       </div>
+
       <div class="row main-view">
+        <!-- Sidebar -->
         <div class="col-2 sidebar">
           <div class="row">
             <div class="col text-center">
@@ -39,7 +43,7 @@
               <button
                 class="btn btn-success btn-block"
                 id="startGameButton"
-                onclick="startGame()"
+                onclick="timeStart()"
               >
                 Start
               </button>
@@ -57,7 +61,12 @@
               </button>
             </div>
             <div class="col-6 pl-1">
-              <button class="btn btn-danger btn-block" id="quitGameButton">
+              <button
+                class="btn btn-danger btn-block"
+                id="quitGameButton"
+                onclick="timeStop()"
+                disabled
+              >
                 ESCI
               </button>
             </div>
@@ -68,7 +77,7 @@
               <p class="h3">TEMPO:</p>
             </div>
             <div class="col text-center">
-              <span class="h4" id="gameTimer">5 secondi.</span>
+              <span class="h4" id="gameTimer"></span>
             </div>
           </div>
 
@@ -89,6 +98,8 @@
             <tbody id="ranking-list"></tbody>
           </table>
         </div>
+        
+        <!-- Cardboard-->
         <div class="col-10" id="cardBoard">
           <div class="row my-4">
             <div class="col-3 d-flex justify-content-center">
