--- a/esercizio9-2/affitti.html
+++ b/esercizio9-2/affitti.html
@@ -54,6 +54,7 @@
     </nav>
 
     <script src="./js/auth.js"></script>
+    <script src="./js/setup.js"></script>
     <script src="./js/affitti.js"></script>
   </body>
 </html>
