--- a/esercizio9-2/cassa.html
+++ b/esercizio9-2/cassa.html
@@ -53,6 +53,7 @@
     </nav>
 
     <script src="./js/auth.js"></script>
+    <script src="./js/setup.js"></script>
     <script src="./js/cassa.js"></script>
   </body>
 </html>
