--- a/esercizio9-2/garage.html
+++ b/esercizio9-2/garage.html
@@ -79,6 +79,7 @@
     ></script>
 
     <script src="./js/auth.js"></script>
+    <script src="./js/setup.js"></script>
     <script src="./js/garage.js"></script>
   </body>
 </html>
