--- a/esercizio9-2/clienti.html
+++ b/esercizio9-2/clienti.html
@@ -74,13 +74,11 @@
 
           <table class="table">
             <thead>
-                <tr class="text-center">                            
-                    <th scope="col">Nome</th>
-                    <th scope="col">Mail</th>
-                    <th scope="col">Data di affitto</th>
-                    <th scope="col">Auto</th>
-                    <th scope="col">Restituisci</th>
-                    <th scope="col">Cancella</th>
+                <tr class="text-center">        
+                  <th scope="col">ID</th>                    
+                  <th scope="col">Nome</th>
+                  <th scope="col">Mail</th>
+                  <th scope="col">Cancella</th>
                 </tr>
             </thead>
               
@@ -147,7 +145,7 @@
     ></script>
 
     <script src="./js/auth.js"></script>
-    <script src="./js/clienti2.js"></script>
+    <script src="./js/clienti.js"></script>
     <script src="./js/setup.js"></script>
     
   </body>
